--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "next": "16.0.10",
     "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
